[gd_scene load_steps=19 format=2]

[ext_resource path="res://Screens/Light/DayNightCycle/DayNightCycle.gd" type="Script" id=1]
[ext_resource path="res://common/Light/radial_light.png" type="Texture" id=2]
[ext_resource path="res://Screens/Light/DayNightCycle/SkyColor.tscn" type="PackedScene" id=5]

[sub_resource type="ViewportTexture" id=1]
flags = 16
viewport_path = NodePath("Viewport")

[sub_resource type="PanoramaSky" id=2]
resource_local_to_scene = true
panorama = SubResource( 1 )

[sub_resource type="Environment" id=3]
resource_local_to_scene = true
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_color = Color( 0, 0.0313726, 0.109804, 1 )
ambient_light_sky_contribution = 0.0
fog_color = Color( 0.72, 0.72, 0.72, 1 )
fog_depth_begin = 100.0
fog_depth_end = 450.0
tonemap_mode = 3

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_fixed_size = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.262745, 0.262745, 0.309804, 1 )

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 100, 30 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.235294, 0.639216, 0.439216, 1 )

[sub_resource type="CylinderMesh" id=9]
material = SubResource( 8 )
top_radius = 500.0
bottom_radius = 500.0
height = 0.1
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 1, 0.709804, 0.439216, 1 )

[sub_resource type="CubeMesh" id=11]
material = SubResource( 10 )
size = Vector3( 5, 0.2, 10 )

[sub_resource type="SpatialMaterial" id=12]

[sub_resource type="CubeMesh" id=13]
material = SubResource( 12 )

[sub_resource type="CubeMesh" id=14]
size = Vector3( 15, 5, 10 )

[sub_resource type="Animation" id=15]
length = 24.0
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("SunLight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 12, 18, 24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 90, 20, 0 ), Vector3( 0, 20, 0 ), Vector3( -90, 20, 0 ), Vector3( -180, 20, 0 ), Vector3( -270, 20, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SunLight:light_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 3, 8, 16, 20, 21 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 0.568627, 0.4, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.529412, 0.4, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldEnvironment:environment:ambient_light_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 5, 8, 10, 14, 15, 17, 21, 23 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.0313726, 0.109804, 1 ), Color( 0, 0.0313726, 0.109804, 1 ), Color( 0.0823529, 0.129412, 0.180392, 1 ), Color( 0.309804, 0.168627, 0.145098, 1 ), Color( 0.215686, 0.27451, 0.439216, 1 ), Color( 0.4, 0.560784, 0.8, 1 ), Color( 0.4, 0.56, 0.8, 1 ), Color( 0.215686, 0.27451, 0.439216, 1 ), Color( 0.309804, 0.168627, 0.145098, 1 ), Color( 0.196078, 0.160784, 0.278431, 1 ), Color( 0, 0.0313726, 0.109804, 1 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("SunLight:light_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 1.15702, -0.00252706, 1, -1.73963, 0.00421268, 0.25, 0, 1.0001, -0.25, 0, 0.617695, -0.00421268, 0, -0.58399, -0.00252706, 0.25, 0 ),
"times": PoolRealArray( 0, 4.8, 8, 16.6588, 18 )
}

[node name="DayNightCycle" type="Spatial"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 2, 1024 )
handle_input_locally = false
hdr = false
usage = 1
render_target_v_flip = true
render_target_update_mode = 3

[node name="SkyColor" parent="Viewport" instance=ExtResource( 5 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="SunLight" type="DirectionalLight" parent="."]
transform = Transform( 0.939693, 0.34202, -1.49502e-08, 0, -4.37114e-08, -1, -0.34202, 0.939692, -4.10753e-08, 0, 3, 0 )
light_color = Color( 0, 0, 0, 1 )
light_energy = 0.0
shadow_enabled = true
shadow_bias = 0.08
directional_shadow_split_1 = 0.05
directional_shadow_split_2 = 0.25
directional_shadow_split_3 = 0.4
directional_shadow_blend_splits = true
directional_shadow_normal_bias = 0.4
directional_shadow_bias_split_scale = 0.2
directional_shadow_max_distance = 75.0

[node name="Sun" type="MeshInstance" parent="SunLight"]
transform = Transform( 1, 0, 0, 0, 0.433884, -0.900969, 0, 0.900969, 0.433884, 0, 0, 550 )
mesh = SubResource( 5 )
material/0 = null

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( -1, -2.99004e-08, 8.21505e-08, 0, 0.939693, 0.34202, -8.74227e-08, 0.34202, -0.939693, -2.03986, 3.03267, 0 )

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 25 )
current = true
far = 1000.0

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0153484 )
mesh = SubResource( 7 )
material/0 = null

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.248959, -0.0153484 )
mesh = SubResource( 9 )
material/0 = null

[node name="Bridge" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.76804, 6.95162, -0.0153484 )
mesh = SubResource( 11 )
material/0 = null

[node name="Boxes" type="Spatial" parent="."]

[node name="Box" type="MeshInstance" parent="Boxes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.890417, 1, -1 )
mesh = SubResource( 13 )
material/0 = null

[node name="Box2" type="MeshInstance" parent="Boxes"]
transform = Transform( 0.885734, 0, 0.464193, 0, 1, 0, -0.464193, 0, 0.885734, -21.4313, 1, -5.29817 )
mesh = SubResource( 13 )
material/0 = null

[node name="Box3" type="MeshInstance" parent="Boxes"]
transform = Transform( 0.920519, 0, 0.390699, 0, 1, 0, -0.390699, 0, 0.920519, -30.7934, 1, 3.66785 )
mesh = SubResource( 13 )
material/0 = null

[node name="Box4" type="MeshInstance" parent="Boxes"]
transform = Transform( -0.344053, 0, 0.93895, 0, 1, 0, -0.93895, 0, -0.344053, 8.08825, 1, -6.70201 )
mesh = SubResource( 13 )
material/0 = null

[node name="Box5" type="MeshInstance" parent="Boxes"]
transform = Transform( -0.266633, 0, 0.963799, 0, 1, 0, -0.963799, 0, -0.266633, 18.4123, 1, -1.36476 )
mesh = SubResource( 13 )
material/0 = null

[node name="Walls" type="Spatial" parent="."]

[node name="Wall" type="MeshInstance" parent="Walls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.99562, 2.27475, -9.18972 )
mesh = SubResource( 14 )
material/0 = null

[node name="Wall2" type="MeshInstance" parent="Walls"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.99562, 5.96077, -6.85865 )
mesh = SubResource( 14 )
material/0 = null

[node name="Wall3" type="MeshInstance" parent="Walls"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.99562, 2.27475, 9.14135 )
mesh = SubResource( 14 )
material/0 = null

[node name="Wall4" type="MeshInstance" parent="Walls"]
transform = Transform( -0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, -1.99562, 5.96077, 6.81028 )
mesh = SubResource( 14 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cycle"
playback_speed = 0.8
anims/cycle = SubResource( 15 )
